--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,13 +30,15 @@
         android:text="@string/rememberPw"
         android:id="@+id/checkBox" />
 
+
     <RelativeLayout
         android:layout_below="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_margin="40dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:id="@+id/relativeLayout">
         <Button
             android:id="@+id/buttonSignUp"
             android:onClick="signUpHandler"
@@ -56,6 +58,16 @@
             android:text="@string/login" />
     </RelativeLayout>
 
+    <Spinner
+        android:id="@+id/spinner"
+        android:prompt="@string/country_selection"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/relativeLayout"
+        android:layout_marginTop="13dp"
+        android:entries="@array/countries"/>
 
 
 </RelativeLayout>
