--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="countries">
-        <item>India</item>
-        <item>China</item>
-        <item>USA</item>
+        <item>@string/india</item>
+        <item>@string/china</item>
+        <item>@string/usa</item>
+        <item>@string/uk</item>
     </string-array>
 </resources>
