--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,13 +69,13 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:prompt="@string/country_selection"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/relativeLayout"
         android:layout_marginTop="13dp"
+        android:spinnerMode="dialog"
         android:entries="@array/countries"/>
 
 
